--- a/Hello world/about.html
+++ b/Hello world/about.html
@@ -22,8 +22,8 @@
           <li><a href="news.php">News</a></li>
           <li class="dropdown"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="res.html">Reading materials</a></li>
-              <li><a href="exam.html">Last exams</a></li>
+              <li><a href="res.php#reading">Reading materials</a></li>
+              <li><a href="res.php#exam">Last exams</a></li>
             </ul>
           </li>
           <li><a href="about.html">About</a></li>
