--- a/Hello world/home.html
+++ b/Hello world/home.html
@@ -130,14 +130,14 @@
           </div>
         </div>
       <div class="row">
-        <a href="" class="btn-get-started animate__animated animate__fadeInUp scrollto" data-bs-toggle="modal" data-bs-target="#exampleModal"> Get started </a>
+        <a href="" class="btn-get-started animate__animated animate__fadeInUp scrollto" data-bs-toggle="modal" data-bs-target="#Role"> Get started </a>
       </div>
       </div>
     </div>
   </section><!-- End of Section -->
 
   <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+<div class="modal fade" id="Role" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
   <div class="modal-dialog modal-dialog-centered" >
     <div class="modal-content" style="background:url(res/modal3.jpg); -webkit-background-size: cover;
     -moz-background-size: cover;
