--- a/Hello world/home.html
+++ b/Hello world/home.html
@@ -93,7 +93,6 @@
   <!-- ===== Admin or student ======-->
   <section id="services" class="services">
     <div class="container">
-
       <div class="row">
         <div class="col-md-6">
           <div class="icon-box">
@@ -104,7 +103,7 @@
                 <path fill-rule="evenodd"
                   d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
               </svg></i>
-            <h4> Take exam </h4>
+            <h4> <a href="login.php"> Take exam </a></h4>
             <p> Take University Entrance Examination conducted nationwide.</p>
           </div>
         </div>
@@ -116,7 +115,7 @@
                 <path
                   d="M8 2a2 2 0 0 0 2-2h2.5A1.5 1.5 0 0 1 14 1.5v13a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-13A1.5 1.5 0 0 1 3.5 0H6a2 2 0 0 0 2 2Zm0 1a3.001 3.001 0 0 1-2.83-2H3.5a.5.5 0 0 0-.5.5v13a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-13a.5.5 0 0 0-.5-.5h-1.67A3.001 3.001 0 0 1 8 3Z" />
               </svg></i>
-            <h4> See result </h4>
+            <h4> <a href="login.php"> See result </a> </h4>
             <p> View your result when it is published.</p>
           </div>
         </div>
@@ -127,7 +126,7 @@
                 <path
                   d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
               </svg></i>
-            <h4> Schedules </h4>
+            <h4> <a href="login.php"> Schedules </a> </h4>
             <p> Cope up with the timetable to take the exam. </p>
           </div>
         </div>
@@ -138,7 +137,7 @@
                 <path
                   d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
               </svg></i>
-            <h4> Resource </h4>
+            <h4> <a href="res.php"> Resource </a></h4>
             <p> Get resources and prepare well for your exam. </p>
           </div>
         </div>
